fix: 글쓰기 화면에서 내 강의/미션 목록 보이게 하기